--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,29 +1,33 @@
-<div class="row">
-	<div class="col-md-12 text-center"><h1 class="heading">Hey, dum dum! Sign up!</h1></div>
-</div>
+<div class="newUserContainer">
+	<div id="appName"><strong>soci.al</strong></div>
+	<div class="newUserContent">	
+		<div class="row">
+			<div class="col-md-12 text-center"><h1 class="heading">Sign up!</h1></div>
+		</div>
 
-<% if @user.errors.any? %>
-	<div id="error-explanation">
-		Try again, dum dum!<br>
-		<% @user.errors.full_messages.each do |msg| %>
-			<%= msg %><br>
+		<% if @user.errors.any? %>
+			<div id="error-explanation">
+				Try again, dum dum!<br>
+				<% @user.errors.full_messages.each do |msg| %>
+					<%= msg %><br>
+				<% end %>
+			</div>
 		<% end %>
+
+		<div class="newUserForm">
+			<%= form_for @user do |f| %>
+				<%= f.text_field :first_name,                placeholder: 'FIRST NAME' %>
+				<%= f.text_field :last_name,                 placeholder: 'LAST NAME (optional)' %><br>
+				<%= f.text_field :email,                     placeholder: 'EMAIL' %><br>
+				<%= f.password_field :password,              placeholder: 'PASSWORD' %><br>
+				<%= f.password_field :password_confirmation, placeholder: 'CONFIRM PASSWORD' %><br>
+				<%= f.text_field :twitter,					 placeholder: 'TWITTER' %> and/or <br>
+				<%= f.text_field :instagram,				 placeholder: 'INSTAGRAM' %><br>
+
+				<%= f.submit %>
+			<% end %>
+
+			<%= link_to 'Already a User? Sign In!', new_sessions_path %>
+		</div>
 	</div>
-<% end %>
-
-<div>
-	<%= form_for @user do |f| %>
-		<%= f.text_field :first_name,                placeholder: 'FIRST NAME' %>
-		<%= f.text_field :last_name,                 placeholder: 'LAST NAME (optional)' %><br>
-		<%= f.text_field :email,                     placeholder: 'EMAIL' %><br><br>
-		<%= f.password_field :password,              placeholder: 'PASSWORD' %><br>
-		<%= f.password_field :password_confirmation, placeholder: 'CONFIRM PASSWORD' %><br><br>
-		<%= f.text_field :twitter,									 placeholder: 'TWITTER' %> and/or
-		<%= f.text_field :instagram,								 placeholder: 'INSTAGRAM' %><br><br>
-
-		<%= f.submit %>
-	<% end %>
-
-	<%= link_to 'I\'m already a user!', new_sessions_path %>
 </div>
-
