--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -8,6 +8,21 @@ th {
   text-align: left;
 }
 
+.newUserContainer {
+	background: url(image-path("bg-1.jpg"));
+	opacity: .85;
+	height: 1000px;
+	width: auto;
+	position: relative;
+}
+
+.newUserContainer #appName {
+	top: 8%;
+	text-align: center;
+	font-size: 170px;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 h1.heading {
 	text-align: center;
 	font-family: "Lora", serif;
@@ -20,29 +35,13 @@ h1.heading {
 	padding-bottom: 50px;
 }
 
-.newUserContainer {
-	background: url(image-path("bg-1.jpg"));
-	opacity: .85;
-	height: 1000px;
-	width: auto;
-	position: relative;
-}
-
-.newUserContainer #appName {
-	top: 15%;
-	text-align: center;
-	font-size: 70px;
-	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}
-
-
 .newUserContent {
-	background-color: white;
+	background: url(image-path('light_wool.png'));
 	border: 2px solid black;
 	width: 500px;
 	margin: 0 auto;
 	padding-bottom: 10px;
-	top: 17%;
+	top: 9%;
 	position: inherit;
 	opacity: .95;
 }
