--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,5 +1,9 @@
-<h1>Hi <%= @user.first_name.capitalize %>!</h1>
+<div class="container">
+	<%= render 'nav' %>
+	<h1>Hi <%= @user.first_name.capitalize %>!</h1>
 
 
-<%= link_to 'Private Recommendations', recommendations_path(user_id: @user.id) %>
-<%= link_to 'Public Recommendations',  user_path(user_id: @user.id) %>
+	<%= link_to 'Private Recommendations', recommendations_path(user_id: @user.id) %>
+	<%= link_to 'Public Recommendations',  user_path(user_id: @user.id) %>
+
+</div>
