--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,25 +1,26 @@
-<%= render 'nav' %>
+<div class="container">
+	<%= render 'nav' %>
 
-<% if @user.errors.any? %>
-	<div id="error-explanation">
-		Try again, dum dum!<br>
-		<% @user.errors.full_messages.each do |msg| %>
-			<%= msg %><br>
-		<% end %>
-	</div>
-<% end %>
-
-<div>
-	<%= form_for @user do |f| %>
-		<%= f.text_field :first_name,                placeholder: 'FIRST NAME' %>
-		<%= f.text_field :last_name,                 placeholder: 'LAST NAME (optional)' %><br>
-		<%= f.text_field :email,                     placeholder: 'EMAIL' %><br><br>
-
-		<%= f.text_field :twitter,									 placeholder: 'TWITTER' %> and/or
-		<%= f.text_field :instagram,								 placeholder: 'INSTAGRAM' %><br><br>
-
-		<%= f.submit %>
+	<% if @user.errors.any? %>
+		<div id="error-explanation">
+			Try again, dum dum!<br>
+			<% @user.errors.full_messages.each do |msg| %>
+				<%= msg %><br>
+			<% end %>
+		</div>
 	<% end %>
-	<%= link_to 'Cancel', recommendations_path %>
-</div>
 
+	<div>
+		<%= form_for @user do |f| %>
+			<%= f.text_field :first_name,                placeholder: 'FIRST NAME' %>
+			<%= f.text_field :last_name,                 placeholder: 'LAST NAME (optional)' %><br>
+			<%= f.text_field :email,                     placeholder: 'EMAIL' %><br><br>
+
+			<%= f.text_field :twitter,									 placeholder: 'TWITTER' %> and/or
+			<%= f.text_field :instagram,								 placeholder: 'INSTAGRAM' %><br><br>
+
+			<%= f.submit %>
+		<% end %>
+		<%= link_to 'Cancel', recommendations_path %>
+	</div>
+</div>
