--- a/app/views/recommendations/new.html.erb
+++ b/app/views/recommendations/new.html.erb
@@ -1,4 +1,4 @@
-<%= render 'nav' %>
+<%= render 'navy' %>
 <div class="row">
 	<div class="col-md-12 text-center"><h1 class="heading">Make a new recommendation!</h1></div>
 </div>
