--- a/app/views/users/_navy.html.erb
+++ b/app/views/users/_navy.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="navbar1">
 	<div class="navbarLogo">
 		<%= link_to 'soci.al ', recommendations_path %>
 	</div>
@@ -21,3 +21,4 @@
 		<%= link_to 'Log out', sessions_path, method: :delete %>
 	</div>
 </div>
+
