--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 	<%= render 'navy' %>
 
-	<div class="recContent">
-		<h1>Recommendations!</h1>
+	<div class="dashboard">
+		<h1>Recommendation Dashboard</h1>
 
 		<div style="border: 1px solid black;border-radius:10px;padding:2%">
 			<h2>RECOMMENDATIONS RECEIVED</h2>
