edit to api call variables, trying to fix cloud66 errors

--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -51,7 +51,7 @@
 							<%= image_tag $twitter.user(rec.handle).profile_image_uri(size=:bigger) %>
 						<% elsif rec.social_media == 'Instagram' %>
 							<% query = rec.handle %>
-							<%= image_tag HTTParty.get(@base_url+@search_access_token+query+'&count=1')['data'][0]['profile_picture'] %>
+							<%= image_tag HTTParty.get(@base_url+@search_access_token+@api_key+'&q='+query+'&count=1')['data'][0]['profile_picture'] %>
 						<% end %>
 					</td>
 						<!--most recent-->
@@ -60,8 +60,8 @@
 							<%= $twitter.user_timeline(rec.handle).first.text %>
 						<% elsif rec.social_media == 'Instagram' %>
 							<% query = rec.handle %>
-							<% insta_user_id = HTTParty.get(@base_url+@search_access_token+query+'&count=1')['data'][0]['id'].to_s %>
-							<% most_recent_photo = HTTParty.get(@base_url+insta_user_id+@photo_access_token+'&count=1')['data'][0]['images']['thumbnail']['url'] %>
+							<% insta_user_id = HTTParty.get(@base_url+@search_access_token+@api_key+'&q='+query+'&count=1')['data'][0]['id'].to_s %>
+							<% most_recent_photo = HTTParty.get(@base_url+insta_user_id+@photo_access_token+@api_key+'&count=1')['data'][0]['images']['thumbnail']['url'] %>
 							<%= image_tag most_recent_photo %>
 						<% end %>
 					</td>
@@ -157,7 +157,7 @@
 							<%= image_tag $twitter.user(rec.handle).profile_image_uri(size=:bigger) %>
 						<% elsif rec.social_media == 'Instagram' %>
 							<% query = rec.handle %>
-							<% prof_pic = HTTParty.get(@base_url+@search_access_token+query+'&count=1')['data'][0]['profile_picture'] %>
+							<% prof_pic = HTTParty.get(@base_url+@search_access_token+@api_key+'&q='+query+'&count=1')['data'][0]['profile_picture'] %>
 							<%= image_tag prof_pic %>
 						<% end %>
 					</td>
@@ -167,8 +167,8 @@
 							<%= $twitter.user_timeline(rec.handle).first.text %>
 						<% elsif rec.social_media == 'Instagram' %>
 							<% query = rec.handle %>
-							<% insta_user_id = HTTParty.get(@base_url+@search_access_token+query+'&count=1')['data'][0]['id'].to_s %>
-							<% most_recent_photo = HTTParty.get(@base_url+insta_user_id+@photo_access_token+'&count=1')['data'][0]['images']['thumbnail']['url'] %>
+							<% insta_user_id = HTTParty.get(@base_url+@search_access_token+@api_key+'&q='+query+'&count=1')['data'][0]['id'].to_s %>
+							<% most_recent_photo = HTTParty.get(@base_url+insta_user_id+@photo_access_token+@api_key+'&count=1')['data'][0]['images']['thumbnail']['url'] %>
 							<%= image_tag most_recent_photo %>
 						<% end %>
 					</td>
