fix cloud66 error

--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -100,7 +100,7 @@
 						<td><%= link_to 'View', rec %>
 								<%= link_to 'Delete', rec, method: :delete, data: {confirm: 'Are you sure?'} %></td>
 					</tr>
-				<% end %>
+				<%# end %>
 				</tbody>
 			</table>
 		</div>
@@ -121,7 +121,7 @@
 					<th>ACTIONS</th>
 					<th colspan="6"></th>
 				</tr>
-				<% @recommendations.each do |rec| %>
+				<%# @recommendations.each do |rec| %>
 					<tr>
 							<!--to-->
 						<td>
