--- a/app/views/recommendations/public.html.erb
+++ b/app/views/recommendations/public.html.erb
@@ -1,5 +1,5 @@
 <%#= link_to 'My user page', recommendations_path %>
-<%= render 'nav' %>
+<%= render 'navy' %>
 
 <div style="margin:0 auto; width:60%; border:4px double black; padding:2%; border-radius:10px">
 	<h1><%= @user.first_name.capitalize %>'s Recommendations!</h1>
