--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -1,12 +1,12 @@
-<div class="container">
+<div class="containerRec">
 	<%= render 'navy' %>
 
 	<div class="dashboard">
 		<h1>Recommendation Dashboard</h1>
 
-		<div style="border: 1px solid black;border-radius:10px;padding:2%">
-			<h2>RECOMMENDATIONS RECEIVED</h2>
-			<table>
+		<div class="recReceived">
+			<h2>Recommendations Received</h2>
+			<table id="tableReceived">
 				<thead>
 				<tr>
 					<th>FROM<%#= link_to 'FROM', :sort => 'user_id' %></th>
@@ -109,9 +109,9 @@
 			</table>
 		</div>
 
-		<div style="border: 1px solid black;border-radius:10px;padding:2%">
-			<h2 class="actions-for-current-user">RECOMMENDATIONS SENT</h2>
-			<table>
+		<div class="recSent">
+			<h2 class="actions-for-current-user">Recommendations Sent</h2>
+			<table id="tableSent">
 				<thead>
 				<tr>
 					<th>TO<%#= link_to 'TO', :sort => 'user_id_to' %></th>
@@ -215,7 +215,7 @@
 				<% end %>
 				</tbody>
 			</table>
-			</div>
+		</div>
 
 	</div>
 </div>
