--- a/app/views/recommendations/show.html.erb
+++ b/app/views/recommendations/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'nav' %>
+<%= render 'navy' %>
 <div style="margin:0 auto; width:60%; border:4px double black; padding:2%; border-radius:10px">
 	<div>
 		<h1>@<%= @recommendation.handle %></h1>
