--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="newUserContainer">
-	<div id="appName"><strong>soci.al</strong></div>
+	<div id="appName2"><strong>soci.al</strong></div>
 	<div class="newUserContent">	
 		<div class="row">
 			<div class="col-md-12 text-center"><h1 class="heading">User Information</h1></div>
@@ -7,7 +7,7 @@
 
 		<% if @user.errors.any? %>
 			<div id="error-explanation">
-				Try again, dum dum!<br>
+				Try again!<br>
 				<% @user.errors.full_messages.each do |msg| %>
 					<%= msg %><br>
 				<% end %>
