--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-	<%= render 'nav' %>
+	<%= render 'navy' %>
 
 	<div class="newUserContent">
 	<h1>Hi <%= @user.first_name.capitalize %>!</h1>
