--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -71,31 +71,31 @@
 					<td>
 						<div class="tags-container">
 							<% if rec.is_blog %>
-								<div class="tag">blog</div>
+								<div class="tag"><%= image_tag 'tag-icons/blog.png' %></div>
 							<% end %>
 							<% if rec.is_fashion %>
-								<div class="tag">fashion</div>
+								<div class="tag"><%= image_tag 'tag-icons/fashion.png' %></div>
 							<% end %>
 							<% if rec.is_film %>
-								<div class="tag">film</div>
+								<div class="tag"><%= image_tag 'tag-icons/film.png' %></div>
 							<% end %>
 							<% if rec.is_food %>
-								<div class="tag">food</div>
+								<div class="tag"><%= image_tag 'tag-icons/food.png' %></div>
 							<% end %>
 							<% if rec.is_funny %>
-								<div class="tag">funny</div>
+								<div class="tag"><%= image_tag 'tag-icons/funny.png' %></div>
 							<% end %>
 							<% if rec.is_music %>
-								<div class="tag">music</div>
+								<div class="tag"><%= image_tag 'tag-icons/music.png' %></div>
 							<% end %>
 							<% if rec.is_news %>
-								<div class="tag">news</div>
+								<div class="tag"><%= image_tag 'tag-icons/news.png' %></div>
 							<% end %>
 							<% if rec.is_sports %>
-								<div class="tag">sports</div>
+								<div class="tag"><%= image_tag 'tag-icons/sports.png' %></div>
 							<% end %>
 							<% if rec.is_tv %>
-								<div class="tag">tv</div>
+								<div class="tag"><%= image_tag 'tag-icons/tv.png' %></div>
 							<% end %>
 						</div>
 					</td>
@@ -178,31 +178,31 @@
 					<td>
 						<div class="tags-container">
 							<% if rec.is_blog %>
-								<div class="tag">blog</div>
+								<div class="tag"><%= image_tag 'tag-icons/blog.png' %></div>
 							<% end %>
 							<% if rec.is_fashion %>
-								<div class="tag">fashion</div>
+								<div class="tag"><%= image_tag 'tag-icons/fashion.png' %></div>
 							<% end %>
 							<% if rec.is_film %>
-								<div class="tag">film</div>
+								<div class="tag"><%= image_tag 'tag-icons/film.png' %></div>
 							<% end %>
 							<% if rec.is_food %>
-								<div class="tag">food</div>
+								<div class="tag"><%= image_tag 'tag-icons/food.png' %></div>
 							<% end %>
 							<% if rec.is_funny %>
-								<div class="tag">funny</div>
+								<div class="tag"><%= image_tag 'tag-icons/funny.png' %></div>
 							<% end %>
 							<% if rec.is_music %>
-								<div class="tag">music</div>
+								<div class="tag"><%= image_tag 'tag-icons/music.png' %></div>
 							<% end %>
 							<% if rec.is_news %>
-								<div class="tag">news</div>
+								<div class="tag"><%= image_tag 'tag-icons/news.png' %></div>
 							<% end %>
 							<% if rec.is_sports %>
-								<div class="tag">sports</div>
+								<div class="tag"><%= image_tag 'tag-icons/sports.png' %></div>
 							<% end %>
 							<% if rec.is_tv %>
-								<div class="tag">tv</div>
+								<div class="tag"><%= image_tag 'tag-icons/tv.png' %></div>
 							<% end %>
 						</div>
 					</td>
