fix merge conflict in public view

--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -107,8 +107,9 @@
 			</tbody>
 		</table>
 	</div>
-			<div class="recSent">
-			<h2 class="actions-for-current-user">Recommendations Sent</h2>
+
+	<div class="recSent">
+		<h2 class="actions-for-current-user">Recommendations Sent</h2>
 			<table id="tableSent">
 				<thead>
 			<tr>
@@ -213,4 +214,5 @@
 			</tbody>
 		</table>
 	</div>
+</div>
 </div>
