--- a/app/views/recommendations/public.html.erb
+++ b/app/views/recommendations/public.html.erb
@@ -11,7 +11,6 @@
 				<% @recommendations.each do |rec| %>
 				<tr>
 					<td>
->>>>>>> 5bc4365ad3b0af437aba13eae2ac98a0679536ad
 						<% if rec.social_media == 'Twitter' %>
 							<%= image_tag('twitter.png') %>
 						<% elsif rec.social_media == 'Instagram' %>
@@ -78,7 +77,7 @@
 						<td>
 							<% if @user.id == session['user_id'].to_i %>
 								<%#= link_to 'View', rec %>
-								<%= link_to 'Delete', rec, method: :delete, data: {confirm: 'Are you sure?'} %>
+								<%= link_to 'Delete | ', rec, method: :delete, data: {confirm: 'Are you sure?'} %>
 								<%= link_to 'Edit', edit_recommendation_path(rec) %>
 							<% end %>
 						</td>
