changed bq for the rest of views, initial user#edit styling

--- a/app/assets/stylesheets/recommendations.scss
+++ b/app/assets/stylesheets/recommendations.scss
@@ -134,6 +134,9 @@ h1,h2,h3 {
 	border-radius: 10px;
 }
 
+#tableSent2 {
+	width: 100%;
+}
 
 #tableSent th {
 	font-size: 16px;
@@ -145,6 +148,4 @@ h1,h2,h3 {
 	width: 300px;
 
 }
-
-
 
