--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,6 +12,16 @@
 	text-align: center;
 }
 
+.containerRec {
+	background: url(image-path('bg-2.jpg'));
+	text-align: center;
+	background-repeat: no-repeat;
+	height: 1000px;
+	width: auto;
+	position: relative;
+	opacity: .80;
+}
+
 #appName2 {
 	color: white;
 	text-align: center;
