--- a/app/views/recommendations/public.html.erb
+++ b/app/views/recommendations/public.html.erb
@@ -6,7 +6,7 @@
 		<h1><%= @user.first_name.capitalize %>'s Recommendations!</h1>
 
 		<div class="publicContent">
-			<table id="tableSent">
+			<table id="tableSent2">
 				<tbody>
 				<% @recommendations.each do |rec| %>
 				<tr>
