trying to fix heroku error

--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -21,8 +21,7 @@
 			</tr>
 			</thead>
 			<tbody>
-			<% @recommendations.where(is_private:true, user_id_to:session['user_id'])
-						 .each do |rec| %>
+			<% @recommendations.where(is_private:true, user_id_to:session['user_id']).each do |rec| %>
 				<tr>
 					<!--from-->
 					<td>
