--- a/app/assets/stylesheets/recommendations.scss
+++ b/app/assets/stylesheets/recommendations.scss
@@ -134,14 +134,14 @@ h1,h2,h3 {
 	border-radius: 10px;
 }
 
-#tableSent2 {
-	width: 100%;
-}
-
 #tableSent th {
 	font-size: 16px;
     text-align: center;
     padding: 4px 5px 4px 5px;
+}
+
+#tableSent2 th {
+	width: 100%;
 }
 
 #tableSent td {
