--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,26 +1,30 @@
-<div class="container">
+<div class="containerRec">
 	<%= render 'navy' %>
-
-	<% if @user.errors.any? %>
-		<div id="error-explanation">
-			Try again, dum dum!<br>
-			<% @user.errors.full_messages.each do |msg| %>
-				<%= msg %><br>
+	<div class="editContent">
+	<h1>Edit Profile</h1>
+		<div class="recSent2">
+			<% if @user.errors.any? %>
+				<div id="error-explanation">
+					Try again, dum dum!<br>
+					<% @user.errors.full_messages.each do |msg| %>
+						<%= msg %><br>
+					<% end %>
+				</div>
 			<% end %>
+
+			<div>
+				<%= form_for @user do |f| %>
+					<%= f.text_field :first_name,                placeholder: 'FIRST NAME' %>
+					<%= f.text_field :last_name,                 placeholder: 'LAST NAME (optional)' %><br>
+					<%= f.text_field :email,                     placeholder: 'EMAIL' %><br><br>
+
+					<%= f.text_field :twitter,									 placeholder: 'TWITTER' %> and/or
+					<%= f.text_field :instagram,								 placeholder: 'INSTAGRAM' %><br><br>
+
+					<%= f.submit %>
+				<% end %>
+				<%= link_to 'Cancel', recommendations_path %>
+			</div>
 		</div>
-	<% end %>
-
-	<div>
-		<%= form_for @user do |f| %>
-			<%= f.text_field :first_name,                placeholder: 'FIRST NAME' %>
-			<%= f.text_field :last_name,                 placeholder: 'LAST NAME (optional)' %><br>
-			<%= f.text_field :email,                     placeholder: 'EMAIL' %><br><br>
-
-			<%= f.text_field :twitter,									 placeholder: 'TWITTER' %> and/or
-			<%= f.text_field :instagram,								 placeholder: 'INSTAGRAM' %><br><br>
-
-			<%= f.submit %>
-		<% end %>
-		<%= link_to 'Cancel', recommendations_path %>
 	</div>
 </div>
