--- a/app/assets/stylesheets/recommendations.scss
+++ b/app/assets/stylesheets/recommendations.scss
@@ -52,7 +52,7 @@ h1,h2,h3 {
 	font-family: "Lora";
 	border-radius: 10px;
 	box-shadow: 0 0 0 8px #eee, 0 0 0 9px #ccc;
-	margin: 75px auto;
+	margin: 15px auto;
 	width: 80%;
 	padding: 1%;
 	border-radius: 10px;
@@ -106,6 +106,16 @@ h1,h2,h3 {
 	border-radius: 10px;
 	padding: 2%;
 	background: url(image-path('light_wool.png'));
+}
+
+.recReceived2 {
+	width: 50%;
+	box-shadow: 0 0 0 8px #eee, 0 0 0 9px #ccc;
+	border-radius: 10px;
+	padding: 2%;
+	background: url(image-path('light_wool.png'));
+	margin: 0 auto;
+	margin-top: 15px;
 }
 
 .recSent {
