--- a/app/assets/stylesheets/recommendations.scss
+++ b/app/assets/stylesheets/recommendations.scss
@@ -183,3 +183,9 @@ h1,h2,h3 {
     padding: 4px 5px 4px 5px;
 }
 
+.recTable {
+	position: inline-block;
+	text-align: center;
+	margin: 0 auto;
+	left: 50%;
+}
