changed login to modal

--- a/app/assets/stylesheets/recommendations.scss
+++ b/app/assets/stylesheets/recommendations.scss
@@ -7,11 +7,12 @@ h1,h2,h3 {
 	opacity: .8;
 	/*border: 2px solid black;
 	border-radius: 10px;*/
-	padding: 1%;
+	padding: 1.5%;
 	color: black;
 	margin: 0 auto;
-	height: 10px;
+	height: 14px;
 	font-size: 16px;
+	font-family: "Lora", serif;
 }
 
 .navbarLogo {
