--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -55,3 +55,9 @@ h1.heading {
 	font-size: 12px;
 	text-align: center;
 }
+
+.editForm {
+	line-height: 200%;
+	text-align: right;
+	margin-right: 44%;
+}
