--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,14 +12,14 @@
 				</div>
 			<% end %>
 
-			<div>
+			<div class="editForm">
 				<%= form_for @user do |f| %>
-					<%= f.text_field :first_name,                placeholder: 'FIRST NAME' %>
-					<%= f.text_field :last_name,                 placeholder: 'LAST NAME (optional)' %><br>
-					<%= f.text_field :email,                     placeholder: 'EMAIL' %><br><br>
+					First Name<%= f.text_field :first_name,                placeholder: 'FIRST NAME' %><br>
+					Last  Name<%= f.text_field :last_name,                 placeholder: 'LAST NAME (optional)' %><br>
+					E-mail    <%= f.text_field :email,                     placeholder: 'EMAIL' %><br>
 
-					<%= f.text_field :twitter,									 placeholder: 'TWITTER' %> and/or
-					<%= f.text_field :instagram,								 placeholder: 'INSTAGRAM' %><br><br>
+					Twitter: <%= f.text_field :twitter,									 placeholder: 'TWITTER' %><br>and/or <br>
+					Instagram: <%= f.text_field :instagram,								 placeholder: 'INSTAGRAM' %><br><br>
 
 					<%= f.submit %>
 				<% end %>
